# basic-interpreter

./: CMakeLists.txt  class-hierarchy.txt  main.cpp  parse-and-write.cpp
include/Interpreter/: Interpreter.hpp
interpreter/: Addition.cpp  Array.cpp  Array.h  AssignArray.cpp  AssignArray.h  AssignVariable.cpp  AssignVariable.h  BinaryExpression.h  CMakeLists.txt  Command.h  Constant.cpp  Constant.h  Division.cpp  Division.h  End.cpp  End.h  Equals.cpp  Equals.h  GoSub.cpp  GoSub.h  Goto.cpp  Goto.h  IfThen.cpp  IfThen.h  Interpreter.cpp  Interpreter.h  LessThan.cpp  Multiplication.cpp  ParserHelper.cpp  ParserHelper.h  Print.cpp  Print.h  Return.cpp  Return.h  Subtraction.cpp  Subtraction.h  Variable.cpp  Variable.h  arithmetic.cpp  arithmetic.h  (+3 more)
interpreter/BooleanExpressions/: BooleanExpression.h  CMakeLists.txt  Equals.cpp  Equals.h  LessThan.cpp  LessThan.h
interpreter/Commands/: AssignArray.cpp  AssignArray.h  AssignVariable.cpp  AssignVariable.h  CMakeLists.txt  End.h  GoSub.cpp  Goto.cpp  IfThen.cpp  IfThen.h  Print.cpp  Print.h  Return.h
interpreter/NumericExpressions/: Addition.cpp  Addition.h  Array.h  BinaryExpression.h  CMakeLists.txt  Constant.cpp  Constant.h  Division.cpp  Division.h  Multiplication.cpp  Multiplication.h  Subtraction.cpp  Subtraction.h  Variable.cpp  Variable.h
interpreter/Parser/: CMakeLists.txt  Parser.cpp  Parser.h  ParserHelper.cpp  ParserHelper.h
src/: CMakeLists.txt
src/Commands/: AssignArray.cpp  AssignArray.hpp  AssignArray.test.cpp  AssignVariable.cpp  AssignVariable.hpp  AssignVariable.test.cpp  CMakeLists.txt  End.cpp  End.hpp  End.test.cpp  GoSub.cpp  GoSub.hpp  GoSub.test.cpp  Goto.cpp  Goto.hpp  Goto.test.cpp  IfThen.cpp  IfThen.hpp  IfThen.test.cpp  Print.cpp  Print.hpp  Print.test.cpp  Return.cpp  Return.hpp  Return.test.cpp
src/Expressions/Boolean/: BooleanExpression.hpp  CMakeLists.txt  Equals.cpp  Equals.hpp  Equals.test.cpp  LessThan.cpp  LessThan.hpp  LessThan.test.cpp
src/Expressions/Numeric/: Addition.cpp  Addition.hpp  Addition.test.cpp  BinaryExpression.hpp  CMakeLists.txt  Constant.cpp  Constant.hpp  Constant.test.cpp  Division.cpp  Division.hpp  Division.test.cpp  Multiplication.cpp  Multiplication.hpp  Multiplication.test.cpp  NumericExpression.hpp  Subtraction.cpp  Subtraction.hpp  Subtraction.test.cpp  Variable.cpp  Variable.hpp  Variable.test.cpp
src/Interpreter/: CMakeLists.txt  Interpreter.cpp  Interpreter.test.cpp
src/Parser/: CMakeLists.txt  FormatStringSpacing.cpp  FormatStringSpacing.hpp  FormatStringSpacing.test.cpp  GetExpressionString.cpp  GetExpressionString.hpp  GetExpressionString.test.cpp  Parser.cpp  Parser.hpp  Parser.test.cpp  ParserHelper.cpp  ParserHelper.hpp  ParserHelper.test.cpp  QueryStringProperties.cpp  QueryStringProperties.hpp  QueryStringProperties.test.cpp
src/main/: CMakeLists.txt  parse-and-write.cpp
tests/: Addition.cpp  Array.cpp  AssignArray.cpp  AssignVariable.cpp  CMakeLists.txt  Constant.cpp  Division.cpp  End.cpp  Equals.cpp  GoSub.cpp  Goto.cpp  IfThen.cpp  Interpreter.cpp  LessThan.cpp  Multiplication.cpp  Parser.cpp  ParserHelper.cpp  Print.cpp  Return.cpp  Subtraction.cpp  Variable.cpp
